[tool.poetry]
name = "api-visited-urls"
version = "0.1.0"
description = "This service provides 2 HTTP resources: for loading links (POST) and for displaying ingormation about visited domains (GET)."
authors = ["Dddarknight <9801677@gmail.com>"]
license = "GPL-3.0-only"
keywords = ["fastAPI"]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Framework :: FastAPI"
]
repository = "https://github.com/Dddarknight/api-visited-urls"
packages = [
  { include = "api_visited_urls" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
fastapi = "^0.85.1"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
